Move to Java 11 and Maven.